k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentrikat
  labels:
    app.kubernetes.io/name: sentrikat
    app.kubernetes.io/part-of: sentrikat
