k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentrikat
  namespace: sentrikat
  labels:
    app.kubernetes.io/name: sentrikat
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sentrikat
    app.kubernetes.io/component: app
